[gd_scene load_steps=16 format=2]

[ext_resource path="res://Content/Textures/Logos/icon.png" type="Texture" id=1]
[ext_resource path="res://Attractions/NetClicker/AllForksDay/Forksgiving/Fonts/KingsCross.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Attractions/NetClicker/AllForksDay/Forksgiving/Fonts/SCRIPTIN.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Attractions/NetClicker/AllForksDay/Forksgiving/Fonts/FancyCardText.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Attractions/NetClicker/AllForksDay/Forksgiving/Fonts/RegencyScriptFLF.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Attractions/NetClicker/AllForksDay/Forksgiving/Invitation/Invitation.gd" type="Script" id=7]


[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 51
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 70
extra_spacing_top = -5
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 73
font_data = ExtResource( 4 )

[node name="Invitation" type="Control"]
modulate = Color( 0.67451, 0.478431, 0.301961, 1 )
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.243137, 0.243137, 0.243137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="celebration" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -782.768
margin_top = 443.554
margin_right = -539.768
margin_bottom = 685.554
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "If your intention is to attend, please  present your invitation"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="preamble" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_top = 13.0
margin_bottom = 118.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
custom_constants/line_separation = -3
bbcode_enabled = true
bbcode_text = "[center]The pleaseure of your company is cordially requested
at our annual [color=#ff7700]AllForkesDay[/color] celebration.[/center]"
text = "The pleaseure of your company is cordially requested
at our annual AllForkesDay celebration."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="honour" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -70.0
margin_right = 512.0
margin_bottom = 131.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 3 )
custom_constants/line_separation = -10
bbcode_enabled = true
bbcode_text = "[center]It is my grand privelage, and honour, to extend this invitation to
attend an evening of [color=#ff7700]Forks[/color] and [color=#ff7700]Fun[/color] at the 2021[/center]
 "
text = "It is my grand privelage, and honour, to extend this invitation to
attend an evening of Forks and Fun at the 2021
 "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gfg" type="Label" parent="honour"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -261.0
margin_top = 100.0
margin_right = 261.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.466667, 0, 1 )
text = "Guy Forkes Gala"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="regards" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -146.0
margin_bottom = -98.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Your delightful host and ever faithfull comrade,"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="signature" type="Label" parent="regards"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 76.0104
margin_top = -34.0013
margin_right = 403.01
margin_bottom = 135.999
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Guy Forkes"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="when" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -298.878
margin_top = 97.0
margin_right = 303.122
margin_bottom = 159.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0.466667, 0, 1 )
text = "2021/12/05"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="h_box" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -213.0
margin_top = 123.0
margin_right = 214.0
margin_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="user_container" type="HBoxContainer" parent="h_box"]
margin_right = 282.0
margin_bottom = 97.0
size_flags_horizontal = 3

[node name="username" type="LineEdit" parent="h_box/user_container"]
margin_right = 202.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0.466667, 0, 1 )
text = "Unblinky"
align = 1
editable = false
placeholder_text = "nom de soir√©e"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edit_ndp_button" type="Button" parent="h_box/user_container"]
margin_left = 206.0
margin_right = 282.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rsvp_button" type="Button" parent="h_box"]
modulate = Color( 1, 0.858824, 0.517647, 1 )
margin_left = 286.0
margin_right = 427.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.909804, 0.933333, 0.164706, 1 )
text = "rsvp"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="h_box/user_container/edit_ndp_button" to="." method="_on_edit_ndp_button_pressed"]
[connection signal="pressed" from="h_box/rsvp_button" to="." method="_on_rsvp_button_pressed"]
